2013-09-16  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/prg/compton.jl: fixup support for
	xinerama shadow cropping, improve support for tabs [fuchur]

	* lisp/sawfish/wm/tabs/tabgroup.jl: add tab-group-windows-hook,
	returning all windows in the current tabgroup [fuchur]

2013-09-14  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/prg/compton.jl: improved working with shadows,
	don't draw shadows for tabbed windows by default, but provide an
	option to force to do so. Also add options to only draw shadows
	for specific window-types. Added no-shadows window-matcher. [fuchur]

2013-09-12  Christopher Roy Bratusek <nano@tuxfamily.org>
	* lisp/sawfish/wm/prg/compton.jl: added full featured integration
	of the compton compositing manager

	* lisp/sawfish/wm/user.jl: load sawfish.wm.prg.compton

	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/state/transient.jl: make 'focus-when-mapped matcher
	chooseable from 'never 'maybe and 'always. 'never is suggested for
	KDE users to prevent notification popups to take focus from currently
	active window (and possibly loosing keyboard input) [fuchur]

	* doc/AUTOSTART
	* man/news.texi: updated

	* lisp/sawfish/wm/tabs/tabgroup.jl
	* lisp/sawfish/wm/match-window.jl: add force-tab window-matcher,
	forcing a window to be tabbed [fuchur]

	* lisp/sawfish/wm/workspace.jl: remember window properties after
	switching workspaces (especially unmaximize-geometry and such) [fuchur]

	* lisp/sawfish/wm/ext/match-window.jl: add window-type window-matcher.
	This allows you to change the _NET_WM_TYPE of a window. Specification
	explicitly state that the client is not allowed to do so. Still, we
	provide this ability in case of bogus applications or testing purposes,
	it is neither desired nor required for normal work. [fuchur]

2013-05-02  Vedat Hallac <vedat@hallac.net>
	* lisp/sawfish/gtk/widget.jl: fix make-choice-item to properly support
	crux theme settings
