@@ -1,3 +1,7 @@
+2013-09-17  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/prg/compton.jl: improve support for xinerama setups
+	[fuchur]
+
 2013-09-16  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/prg/compton.jl: fixup support for
 	xinerama shadow cropping, improve support for tabs [fuchur]
